--- a/untitled.ui
+++ b/untitled.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string> Mpyflasher</string>
+   <string>Esp_pyflasher</string>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
@@ -113,14 +113,14 @@
   <widget class="QCheckBox" name="checkBox_3">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>80</x>
      <y>60</y>
      <width>71</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Auto</string>
+    <string>Advanced</string>
    </property>
   </widget>
  </widget>
