--- a/untitled.ui
+++ b/untitled.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>334</width>
-    <height>125</height>
+    <width>355</width>
+    <height>117</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,16 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>80</y>
-     <width>75</width>
-     <height>23</height>
+     <x>280</x>
+     <y>40</y>
+     <width>71</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>宋体</family>
+    </font>
    </property>
    <property name="text">
     <string>Flash</string>
@@ -29,67 +34,79 @@
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>10</y>
-     <width>241</width>
+     <x>70</x>
+     <y>40</y>
+     <width>201</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>宋体</family>
+     <pointsize>9</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>0</y>
-     <width>71</width>
+     <x>10</x>
+     <y>30</y>
+     <width>61</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>宋体</family>
-     <pointsize>10</pointsize>
+     <family>微软雅黑</family>
+     <pointsize>9</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>串口：</string>
+    <string>ComPort：</string>
    </property>
   </widget>
   <widget class="QComboBox" name="comboBox_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>40</y>
-     <width>241</width>
+     <x>70</x>
+     <y>70</y>
+     <width>201</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>宋体</family>
+     <pointsize>9</pointsize>
+    </font>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
+     <x>10</x>
+     <y>60</y>
      <width>71</width>
      <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>宋体</family>
-     <pointsize>10</pointsize>
+     <family>微软雅黑</family>
+     <pointsize>9</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>固件：</string>
+    <string>Firmware：</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>60</y>
-     <width>101</width>
+     <x>220</x>
+     <y>10</y>
+     <width>61</width>
      <height>21</height>
     </rect>
    </property>
@@ -97,30 +114,52 @@
     <string>Erase</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_2">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>60</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Esp8266</string>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="checkBox_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>60</y>
+     <x>280</x>
+     <y>10</y>
      <width>71</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Advanced</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>0</y>
+     <width>71</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑</family>
+     <pointsize>9</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Board   ：</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_3">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>10</y>
+     <width>101</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>宋体</family>
+     <pointsize>9</pointsize>
+    </font>
    </property>
   </widget>
  </widget>
