--- a/untitled.ui
+++ b/untitled.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>355</width>
-    <height>117</height>
+    <width>426</width>
+    <height>127</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>esp_pyflasher</string>
+   <string>esp_flashtool</string>
   </property>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>40</y>
-     <width>71</width>
-     <height>51</height>
+     <x>370</x>
+     <y>10</y>
+     <width>51</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="font">
@@ -36,7 +36,7 @@
     <rect>
      <x>70</x>
      <y>40</y>
-     <width>201</width>
+     <width>291</width>
      <height>22</height>
     </rect>
    </property>
@@ -71,7 +71,7 @@
     <rect>
      <x>70</x>
      <y>70</y>
-     <width>201</width>
+     <width>291</width>
      <height>22</height>
     </rect>
    </property>
@@ -117,7 +117,7 @@
   <widget class="QCheckBox" name="checkBox_3">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>290</x>
      <y>10</y>
      <width>71</width>
      <height>21</height>
@@ -151,7 +151,7 @@
     <rect>
      <x>70</x>
      <y>10</y>
-     <width>101</width>
+     <width>111</width>
      <height>22</height>
     </rect>
    </property>
