--- a/untitled.ui
+++ b/untitled.ui
@@ -1,178 +1,178 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>426</width>
-    <height>127</height>
-   </rect>
-  </property>
-  <property name="windowTitle">
-   <string>ESP Flash Tool</string>
-  </property>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>10</y>
-     <width>51</width>
-     <height>81</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Flash</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>40</y>
-     <width>291</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>61</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>ComPort：</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>70</y>
-     <width>291</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>71</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Firmware：</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>220</x>
-     <y>10</y>
-     <width>61</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Erase</string>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox_3">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>10</y>
-     <width>71</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-    </font>
-   </property>
-   <property name="text">
-    <string>Advanced</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>0</y>
-     <width>71</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Board    ：</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="comboBox_3">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>10</y>
-     <width>111</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>宋体</family>
-     <pointsize>9</pointsize>
-    </font>
-   </property>
-  </widget>
- </widget>
- <resources/>
- <connections/>
+    <class>Form</class>
+    <widget class="QWidget" name="Form">
+        <property name="geometry">
+            <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>426</width>
+                <height>127</height>
+            </rect>
+        </property>
+        <property name="windowTitle">
+            <string>ESP Flash Tool</string>
+        </property>
+        <widget class="QPushButton" name="pushButton">
+            <property name="geometry">
+                <rect>
+                    <x>370</x>
+                    <y>10</y>
+                    <width>51</width>
+                    <height>81</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                </font>
+            </property>
+            <property name="text">
+                <string>Flash</string>
+            </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox">
+            <property name="geometry">
+                <rect>
+                    <x>70</x>
+                    <y>40</y>
+                    <width>291</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+        </widget>
+        <widget class="QLabel" name="label">
+            <property name="geometry">
+                <rect>
+                    <x>10</x>
+                    <y>30</y>
+                    <width>61</width>
+                    <height>41</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+            <property name="text">
+                <string>Com Port</string>
+            </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox_2">
+            <property name="geometry">
+                <rect>
+                    <x>70</x>
+                    <y>70</y>
+                    <width>291</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+        </widget>
+        <widget class="QLabel" name="label_3">
+            <property name="geometry">
+                <rect>
+                    <x>10</x>
+                    <y>60</y>
+                    <width>71</width>
+                    <height>41</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+            <property name="text">
+                <string>Firmware</string>
+            </property>
+        </widget>
+        <widget class="QCheckBox" name="checkBox">
+            <property name="geometry">
+                <rect>
+                    <x>220</x>
+                    <y>10</y>
+                    <width>61</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                </font>
+            </property>
+            <property name="text">
+                <string>Erase</string>
+            </property>
+        </widget>
+        <widget class="QCheckBox" name="checkBox_3">
+            <property name="geometry">
+                <rect>
+                    <x>290</x>
+                    <y>10</y>
+                    <width>71</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                </font>
+            </property>
+            <property name="text">
+                <string>Advanced</string>
+            </property>
+        </widget>
+        <widget class="QLabel" name="label_2">
+            <property name="geometry">
+                <rect>
+                    <x>10</x>
+                    <y>0</y>
+                    <width>71</width>
+                    <height>41</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+            <property name="text">
+                <string>Board</string>
+            </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox_3">
+            <property name="geometry">
+                <rect>
+                    <x>70</x>
+                    <y>10</y>
+                    <width>111</width>
+                    <height>22</height>
+                </rect>
+            </property>
+            <property name="font">
+                <font>
+                    <family>宋体</family>
+                    <pointsize>9</pointsize>
+                </font>
+            </property>
+        </widget>
+    </widget>
+    <resources/>
+    <connections/>
 </ui>
